<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/home_fragment_title"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_homeFragment_to_productsFragment"
            app:destination="@id/productsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_categoriesFragment"
            app:destination="@id/categoriesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_ordersFragment"
            app:destination="@id/ordersFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.myapplication.ui.login.LoginFragment"
        android:label="@string/login_screen_title"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/productsFragment"
        android:name="com.example.myapplication.ui.products.ProductsFragment"
        android:label="@string/products_screen_title"
        tools:layout="@layout/fragment_products">
        <argument
            android:name="categoryId"
            android:defaultValue="-1L"
            app:argType="long" />
        <argument
            android:name="categoryTitle"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_productsFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.example.myapplication.ui.categories.CategoriesFragment"
        android:label="@string/categories_screen_title"
        tools:layout="@layout/fragment_categories">
        <action
            android:id="@+id/action_categoriesFragment_to_productsFragment"
            app:destination="@id/productsFragment" />
        <action
            android:id="@+id/action_categoriesFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.myapplication.ui.productdetail.ProductDetailFragment"
        android:label="@string/product_detail_screen_title"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="productId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.example.myapplication.ui.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders">
        <action
            android:id="@+id/action_ordersFragment_to_paidOrdersFragment"
            app:destination="@id/paidOrdersFragment" />
    </fragment>

    <fragment
        android:id="@+id/paidOrdersFragment"
        android:name="com.example.myapplication.ui.orders.PaidOrdersFragment"
        android:label="@string/paid_orders_title"
        tools:layout="@layout/fragment_paid_orders">
        <action
            android:id="@+id/action_paidOrdersFragment_to_paidOrderDetailFragment"
            app:destination="@id/paidOrderDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/paidOrderDetailFragment"
        android:name="com.example.myapplication.ui.orders.PaidOrderDetailFragment"
        android:label="@string/paid_order_detail_title"
        tools:layout="@layout/fragment_paid_order_detail">
        <argument
            android:name="orderId"
            app:argType="long" />
    </fragment>


</navigation>